--- a/style/main.css
+++ b/style/main.css
@@ -71,12 +71,14 @@
 
     opacity: 0;
     visibility: hidden;
-    transition: 0.55s opacity, 0.55s visibility ease;
+    transform: scale(1);
+    transition: 2s opacity, 2s visibility, 2s transform  ease;
 }
 
 .liked_act {
     opacity: 1;
     visibility: visible;
+    transform: scale(1.5);
 }
 
 .blc_pr_t_b {
@@ -194,7 +196,6 @@
     width: 35px;
     height: 35px;
 
-    /* background-color: transparent; */
     color: black;
 
     font-size: 22px;
@@ -203,6 +204,7 @@
 
     cursor: pointer;
 
+    z-index: 1;
     position: fixed;
     right: 50px;
     bottom: 30px;
@@ -232,6 +234,10 @@
     margin-bottom: 5px;
 
     cursor: pointer;
+    transition: .3ms ease;
+}
+.set_img_share:hover {
+    transform: scale(1.3);
 }
 
 /* @media only screen and (max-width: 1148px) {
